--- a/src/main/resources/news.txt
+++ b/src/main/resources/news.txt
@@ -1,4 +1,4 @@
-https://media.kpfu.ru ; news?kn%5B0%5D=%D0%9D%D0%BE%D0%B2%D0%BE%D1%81%D1%82%D0%B8%20%D0%BD%D0%B0%D1%83%D0%BA%D0%B8&created ; .newsItem-content ; .newsItem-top a.boldLink ; href ; .newsItem-date ; .body-text
-https://www.nsu.ru ; n/media/news/nauka ; .news-list-grid-item ; .name.link-issue ; href ; .date ; .detail_text
-https://media.kpfu.ru ; news?kn%5B0%5D=%D0%9D%D0%BE%D0%B2%D0%BE%D1%81%D1%82%D0%B8%20%D0%BD%D0%B0%D1%83%D0%BA%D0%B8&created ; .newsItem-content ; .newsItem-top a.boldLink ; href ; .newsItem-date ; .body-text
-https://www.nsu.ru ; n/media/news/nauka ; .news-list-grid-item ; .name.link-issue ; href ; .date ; .detail_text
+https://kantiana.ru ; news/?filter_news_ff%5BTAGS%5D=%D0%9D%D0%B0%D1%83%D0%BA%D0%B0&filter_news_pf%5BPERSONS%5D=&set_filter=Y ; .news-item.news-item--medium ; .news-item__title ; href ; .news-item__date ; .page__content.news-item__content
+
+0 ; https://media.kpfu.ru ; news?kn%5B0%5D=%D0%9D%D0%BE%D0%B2%D0%BE%D1%81%D1%82%D0%B8%20%D0%BD%D0%B0%D1%83%D0%BA%D0%B8&created ; .newsItem-content ; .newsItem-top a.boldLink ; href ; .newsItem-date ; .body-text
+0 ; https://www.nsu.ru ; n/media/news/nauka ; .news-list-grid-item ; .name.link-issue ; href ; .date ; .detail_text
