--- a/src/main/resources/news.txt
+++ b/src/main/resources/news.txt
@@ -16,7 +16,7 @@
  ; https://mrsu.ru ; ru/sci/sciunis/news/ ; .voccc ; .header_news__in__back ; a ; href ; .date_news__in__back ; .text_main_news
  ; https://miet.ru ; news/tag/%D0%9D%D0%B0%D1%83%D0%BA%D0%B0 ; .news-list__item ; .news-list__item-title ; a ; href ; .news-list__item-date ; p , ul li, ol li
  ; https://mgsu.ru ; news/Nauka/ ; .news-list-item ; .news-title ; h3 a ; href ; .news-date ; .news-text
-https://kf.bmstu.ru ; news?t=%D0%BD%D0%B0%D1%83%D0%BA%D0%B0 ; .l-news-list-col ; .l-news-title ; a ; href ; .l-news-date ; .l-typography-text
+ ; https://kf.bmstu.ru ; news?t=%D0%BD%D0%B0%D1%83%D0%BA%D0%B0 ; .l-news-list-col ; .l-news-title ; a ; href ; .l-news-date ; .l-typography-text
 https://nauka.unn.ru ; news/ ; .news__item ; .news__item-title ; a.more-link.news__item-more ; href ; .news__item-date ; .content-style
  ; https://www.nsu.ru ; n/media/news/nauka ; .news-list-grid-item ; .name.link-issue ; a ; href ; .date ; .detail_text
  ; https://pstu.ru ; activity/innovation/news/ ; .news_item ; .title ; a ; href ; .date ; .text p
